experimental/parser/testdata/parser/import/modifiers.proto.stderr.txt
error: unexpected `weak` modifier in import
  --> testdata/parser/import/modifiers.proto:19:15
   |
19 | import public weak "foo.proto";
   | ------------- ^^^^
   |  |
   |  already modified here

error: unexpected `option` modifier in import
  --> testdata/parser/import/modifiers.proto:20:15
   |
20 | import public option "foo.proto";
   | ------------- ^^^^^^
   |  |
   |  already modified here

warning: `import weak` is deprecated
  --> testdata/parser/import/modifiers.proto:21:1
   |
21 | import weak option "foo.proto";
   | ^^^^^^^^^^^
   = help: `import weak` is not implemented correctly in most Protobuf
           implementations

error: unexpected `option` modifier in import
  --> testdata/parser/import/modifiers.proto:21:13
   |
21 | import weak option "foo.proto";
   | ----------- ^^^^^^
   |  |
   |  already modified here

error: `import option` requires Edition 2024 or later
  --> testdata/parser/import/modifiers.proto:22:1
   |
22 | import option weak public "foo.proto";
   | ^^^^^^^^^^^^^

error: unexpected `weak` modifier in import
  --> testdata/parser/import/modifiers.proto:22:15
   |
22 | import option weak public "foo.proto";
   | ------------- ^^^^
   |  |
   |  already modified here

error: unexpected `public` modifier in import
  --> testdata/parser/import/modifiers.proto:22:20
   |
22 | import option weak public "foo.proto";
   | -------------      ^^^^^^
   |  |
   |  already modified here

warning: `import weak` is deprecated
  --> testdata/parser/import/modifiers.proto:23:1
   |
23 | import weak weak "foo.proto";
   | ^^^^^^^^^^^
   = help: `import weak` is not implemented correctly in most Protobuf
           implementations

error: unexpected `weak` modifier in import
  --> testdata/parser/import/modifiers.proto:23:13
   |
23 | import weak weak "foo.proto";
   | ----------- ^^^^
   |  |
   |  already modified here

error: unexpected `export` modifier in import
  --> testdata/parser/import/modifiers.proto:24:8
   |
24 | import export "foo.proto";
   |        ^^^^^^
  help: replace with `public`
   |
24 | - import export "foo.proto";
24 | + import public "foo.proto";
   |
   = help: `export` only applies to a type definition

encountered 8 errors and 2 warnings
